posiGen_FullsendBox/src/objects/Box_Error__c.object
<CustomObject>
    <fields>
        <fullName>API_Url__c</fullName>
        <label>API Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Box Logs</relationshipLabel>
        <relationshipName>Box_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Url__c</fullName>
        <label>Manual Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_Uploaded_Id__c</fullName>
        <label>Not Uploaded Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Box_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Folder</label>
        <referenceTo>Sub_Folder__c</referenceTo>
        <relationshipName>Box_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>UserEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X401_Errors</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>401</value>
        </filters>
        <label>401 Errors</label>
    </listViews>
    <nameField>
        <label>Error Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Box Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>